--- a/Page2.html
+++ b/Page2.html
@@ -11,7 +11,7 @@
   <header>
     <div class="cabecera-superior">
       <span>19:23</span>
-      <div class="icono-volver"><i class="fas fa-arrow-left"></i></div>
+      <a href="Page1.html" class="icono-volver"><i class="fas fa-arrow-left"></i></a>
       <div class="icono-carrito"><i class="fas fa-shopping-cart"></i></div>
     </div>
   </header>
